--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,20 +23,21 @@
     --color-zinc-900: #171717;
     --color-zinc-950: #0a0a0a;
 
-    --color-accent: var(--color-cyan-600);
-    --color-accent-content: var(--color-cyan-600);
+    --color-accent: var(--color-neutral-800);
+    --color-accent-content: var(--color-neutral-800);
     --color-accent-foreground: var(--color-white);
 }
 
 @layer theme {
     .dark {
-        --color-accent: var(--color-cyan-600);
-        --color-accent-content: var(--color-cyan-400);
-        --color-accent-foreground: var(--color-white);
+        --color-accent: var(--color-white);
+        --color-accent-content: var(--color-white);
+        --color-accent-foreground: var(--color-neutral-800);
     }
 }
 
 @layer base {
+
     *,
     ::after,
     ::before,
